# cable_neuron

./: CMakeLists.txt  CMakeLists.txt~  Ca_NCX.cpp  Ca_NCX.h  Ca_PMCA.cpp  Ca_PMCA.h  ElemDiscHH.cpp  ElemDiscHH_Nernst_fv1.cpp  ElemDiscHH_Nernst_fv1.h  ElemDiscHH_Nernst_neuron_fv1.cpp  ElemDiscHH_Nernst_neuron_fv1.h  ElemDiscHH_base.cpp  ElemDiscHH_base.h  ElemDiscHH_fv1.cpp  ElemDiscHH_fv1.h  LICENSE  Na_K_Pump.cpp  Na_K_Pump.h  README.md  VM_Disc.cpp  VM_Disc.h  cable_equation.cpp  cable_equation.h  channel_hh.cpp  channel_hh.h  channel_interface.cpp  channel_interface.h  config_cmake.h  diam_attachment_handler.h  hh_converted_UG.cpp  hh_converted_UG.h  hh_converted_standard_UG.cpp  hh_converted_standard_UG.h  ion_leakage.cpp  ion_leakage.h  leakage.cpp  leakage.h  order.cpp  order.h  plugin_main.cpp  (+2 more)
Convert/: .cproject  Converter.cpp  Converter.h  Kv4_csiosi.mod  main.cpp
Convert/Debug/: CaT_converted_standard_UG.cpp  CaT_converted_standard_UG.h  Convert  Converter.d  HH2_converted_standard_UG.cpp  HH2_converted_standard_UG.h  Kv4_csi.mod  Kv4_csi_converted_standard_UG.cpp  Kv4_csi_converted_standard_UG.h  Kv4_csiosi_converted_standard_UG.cpp  Kv4_csiosi_converted_standard_UG.h  NMDA_Mg_T_converted_standard_UG.cpp  NMDA_Mg_T_converted_standard_UG.h  NMDA_Mg_converted_standard_UG.cpp  NMDA_Mg_converted_standard_UG.h  VM_Disc.h  ar_converted_standard_UG.cpp  ar_converted_standard_UG.h  caL3d.mod  caL3d_converted_standard_UG.cpp  caL3d_converted_standard_UG.h  ca_converted_allNernst_UG.cpp  ca_converted_allNernst_UG.h  ca_converted_standard_UG.cpp  ca_converted_standard_UG.h  cable_equation.h  cad_converted_standard_UG.cpp  cad_converted_standard_UG.h  channel_interface.cpp  channel_interface.h  channel_sources  channels.cpp  depp.cpp  depp.h  h_converted_standard_UG.cpp  h_converted_standard_UG.h  haha.cpp  haha.h  hahaha.cpp  hahaha.h  (+33 more)
cable_disc/: ElemDiscHH_Nernst_fv1.cpp  ElemDiscHH_Nernst_fv1.h  ElemDiscHH_Nernst_neuron_fv1.cpp  ElemDiscHH_Nernst_neuron_fv1.h  ElemDiscHH_base.cpp  ElemDiscHH_base.h  ElemDiscHH_fv1.cpp  ElemDiscHH_fv1.h  cable_equation.cpp  cable_equation.h  cable_equation_withOuterPot.cpp  cable_equation_withOuterPot.h  implicit_active_cable_disc.cpp  implicit_active_cable_disc.h  implicit_active_cable_disc_base.cpp  implicit_active_cable_disc_base.h  implicit_active_cable_disc_nernst.cpp  implicit_active_cable_disc_nernst.h
cable_equation/: ElemDiscHH_Nernst_neuron_fv1.cpp  ElemDiscHH_base.cpp  ElemDiscHH_fv1.cpp  ElemDiscHH_fv1.h  cable_equation.cpp  cable_equation.h
membrane_transport/: cable_membrane_transport_interface.cpp  cable_membrane_transport_interface.h  channel_hh.cpp  channel_hh.h  ion_leakage.cpp  ion_leakage.h  ka_dist_golding01.cpp  ka_dist_golding01.h  ka_golding01.cpp  ka_golding01.h  kdr_golding01.cpp  kdr_golding01.h  leakage.cpp  leakage.h  na_k_pump.cpp  na_k_pump.h  nax_golding01.cpp  nax_golding01.h  ncx.cpp  ncx.h  pmca.cpp  pmca.h  vdcc_bg.cpp  vdcc_bg.h
membrane_transport/nmodl_converter/: Converter.cpp  Converter.h  main.cpp
split_synapse_distributor/: sources.cmake  split_synapse_distributor.cpp  split_synapse_distributor.h
split_synapse_handler/: AlphaPostSynapse.cpp  AlphaPostSynapse.h  AlphaPreSynapse.cpp  AlphaPreSynapse.h  Exp2PostSynapse.cpp  Exp2PostSynapse.h  Exp2PreSynapse.cpp  Exp2PreSynapse.h  IBaseSynapse.cpp  IBaseSynapse.h  IPostSynapse.cpp  IPostSynapse.h  IPreSynapse.cpp  IPreSynapse.h  PostAlphaSynapse.cpp  PostAlphaSynapse.h  PostExp2Synapse.cpp  PreAlphaSynapse.h  PreExp2Synapse.cpp  SplitSynapseHandler.cpp  SplitSynapseHandler.h  SynapseDealer.cpp  SynapseDealer.h  alpha_post_synapse.cpp  alpha_post_synapse.h  alpha_pre_synapse.cpp  alpha_pre_synapse.h  base_synapse.cpp  base_synapse.h  exp2_post_synapse.cpp  exp2_post_synapse.h  exp2_pre_synapse.cpp  exp2_pre_synapse.h  post_synapse.cpp  post_synapse.h  pre_synapse.cpp  pre_synapse.h  sources.cmake  split_synapse_attachment_handler.cpp  split_synapse_attachment_handler.h  (+13 more)
splittedsynapse_handler/: IPostSynapse.cpp  IPostSynapse.h  IPreSynapse.cpp  IPreSynapse.h  PostAlphaSynapse.cpp  PostAlphaSynapse.h  PreAlphaSynapse.cpp  PreAlphaSynapse.h  UTest.cpp  UTest.h  sources.cmake  sources.cmake~
synapse_distributor/: CMakeLists.txt  plugin_main.cpp  synapse_distributor.cpp  synapse_distributor.h  synapse_distributor_impl.h
synapse_distributor_deprec/: synapse_distributor.cpp  synapse_distributor.h  synapse_distributor_impl.h
synapse_handler/: CMakeLists.txt  plugin_main.cpp  synapse.h  synapse_factory.h  synapse_handler.cpp  synapse_handler.h
synapse_handler/function/: synapse_factory_producer.cpp  synapse_factory_producer.h  synapses.cpp  synapses.h  types.h
synapse_handler/grid/: synapse_info.cpp  synapse_info.h  synapse_info_attachment_handler.cpp  synapse_info_attachment_handler.h  synapse_info_io_traits.h
synapse_handler/selector/: synapse_mapping.h  synapse_selector.h  synapse_selector_info_traits.h  synapse_selector_traits.h
synapse_handler/util/: utility.cpp  utility.h
synapse_handler_deprec/: synapse.h  synapse_factory.h  synapse_handler.cpp  synapse_handler.h
synapse_handler_deprec/function/: synapse_factory_producer.cpp  synapse_factory_producer.h  synapses.h  types.h
synapse_handler_deprec/grid/: synapse_info.cpp  synapse_info.h  synapse_info_attachment_handler.h  synapse_info_io_traits.h
synapse_handling/: sources.cmake  synapse_attachment_handler.cpp  synapse_attachment_handler.h  synapse_attachment_serializer.cpp  synapse_attachment_serializer.h  synapse_container.cpp  synapse_container.h  synapse_dealer.cpp  synapse_dealer.h  synapse_dealer_impl.h  synapse_distributor.cpp  synapse_distributor.h  synapse_handler.cpp  synapse_handler.h  synapse_info_io_traits.h  types.h
util/: cable_ass_tuner.h  cable_ass_tuner_impl.h  cable_neuron_unificator.cpp  cable_neuron_unificator.h  diam_attachment_handler.cpp  diam_attachment_handler.h  functions.cpp  functions.h  neuronal_topology_importer.cpp  neuronal_topology_importer.h  order.cpp  order.h  simple_cable_neuron_partitioner.cpp  simple_cable_neuron_partitioner.h
(+102 files in other folders)
